--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("../styles/fonts.css");
+
+* {
+  font-family: "Titillium Web", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/fonts/TitilliumWeb-Regular.ttf) format("ttf");
+}
